# ProdOS

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  alembic.ini  config.example.toml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml  windows-build.yml
docs/: ADMIN_GUIDE.md  ANDROID_PWA.md  BACKUP_RESTORE.md  DATA_MODEL.md  INSTALL_WINDOWS.md  MCP.md  PRODUCT_SPEC.md  RELEASE_PROCESS.md  SECURITY_MODEL.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/adr/: 0001-plain-uuid-fk-shaped-columns.md  0002-fastmcp-for-mcp-server.md  0003-signed-cookies-not-server-side-sessions.md  0004-sqlite-only-postgres-compatible-models.md  0005-pyinstaller-onedir-frozen-path-resolution.md  0006-inno-setup-installer.md
docs/screenshots/: README.md
migrations/: env.py
migrations/versions/: 657ecae8ddab_initial_schema.py
packaging/: README.md
packaging/inno/: producer-os.iss
packaging/pyinstaller/: launcher.py  produceros.spec
scripts/: backup.ps1  build_installer.ps1  build_windows.ps1  clean_demo.ps1  generate_icons.py  restore.ps1  run_desktop.ps1  run_lan.ps1  run_tests.ps1  setup_windows.ps1
src/produceros/: __init__.py  cli.py  config.py  logging_config.py  security.py
src/produceros/analytics/: __init__.py  csv_templates.py  importer.py  summaries.py
src/produceros/audio/: __init__.py  ffmpeg.py  metadata.py
src/produceros/db/: __init__.py  base.py  session.py
src/produceros/delivery/: __init__.py  manifest.py  packaging.py  presets.py
src/produceros/demo/: __init__.py  audio_fixtures.py  generator.py
tests/: conftest.py
tests/e2e/: conftest.py  test_full_workflow.py  test_mobile_viewport.py
tests/integration/: test_analytics_import.py  test_audit_log.py  test_backup_and_restore.py  test_calendar_export.py  test_delivery_manifest.py  test_first_run_and_login.py  test_migrations.py  test_project_workflow.py  test_scanner_dry_run.py
tests/security/: test_auth_security.py  test_csrf.py  test_file_operations_security.py  test_pairing_http.py  test_scanner_malformed_input.py  test_secret_redaction.py  test_shell_injection.py
tests/unit/: test_audio_metadata.py  test_backup_validation.py  test_checklist.py  test_cli_restore.py  test_cli_run_mcp_wiring.py  test_csv_import.py  test_filename_parser.py  test_hashing.py  test_marketing_templates.py  test_mcp_schema.py  test_pairing.py  test_rights_shares.py  test_security.py
(+94 files in other folders)
