[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "produceros"
version = "0.1.0"
description = "Local-first music production management system for FL Studio producers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ProducerOS Contributors" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.115,<0.140",
    "uvicorn[standard]>=0.30,<0.36",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<1.15",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.9",
    "watchdog>=4.0,<6.0",
    "mutagen>=1.47,<2.0",
    "argon2-cffi>=23.1,<24.0",
    "itsdangerous>=2.2,<3.0",
    "qrcode>=7.4,<8.0",
    "python-dateutil>=2.9,<3.0",
    "mcp>=1.9,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<0.25",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<0.28",
    "ruff>=0.5,<0.9",
    "mypy>=1.10,<1.14",
    "types-python-dateutil",
    "playwright>=1.45,<1.50",
    "pyinstaller>=6.8,<7.0",
]

[project.scripts]
produceros = "produceros.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
produceros = [
    "web/templates/**/*.html",
    "web/static/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts Depends()/Query() calls in
# parameter defaults by design; B008 would flag every route signature.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Form", "fastapi.File"]

[tool.ruff.lint.isort]
known-first-party = ["produceros"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false
exclude = ["migrations/versions", "tests"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/produceros"]
